[package]
name = "project"
version = "0.1.0"
authors = ["Krovspey Stepan <pit-rpg@yandex.ua>"]

[dependencies]
glutin = "0.21.0"
gl = "0.12.0"
rand = "0.6.5"
specs = "0.14.3"
image = "0.21.2"
uuid = { version = "0.7.4", features = ["v4"] }
byteorder = "1.3.2"
typer = "0.1.1"
obj = "0.9.0"
regex = "1.1.7"
lazy_static = "1.3.0"
rayon = "1.0.3"
gltf = "0.12.0"
heck = "0.3.1"
serde_json = "1.0.39"
serde = {version =  "1.0.92", features = ["derive"]}
clap = "2.33.0"
colored = "1.8.0"
tar = "0.4.26"

[features]
prod = []
names = []

[profile.dev]
opt-level = 2

[[bin]]
name = "resource-manager"
path = "resource-manager/main.rs"