[package]
name = "project"
version = "0.1.0"
authors = ["Krovspey Stepan <pit-rpg@yandex.ua>"]

[dependencies]
glutin = "0.26.0"
gl = "0.14.0"
rand = "0.8.3"
image = "0.23.8"
uuid = { version = "0.8.1", features = ["v4"] }
byteorder = "1.3.4"
typer = "0.1.1"
obj = "0.10.2"
regex = "1.3.9"
lazy_static = "1.4.0"
rayon = "1.3.1"
gltf = "0.15.2"
heck = "0.3.1"
serde_json = "1.0.57"
serde = {version =  "1.0.115", features = ["derive"]}
clap = "2.33.3"
colored = "2.0.0"
tar = "0.4.29"
pathdiff = "0.2.0"

[features]
prod = []
names = []

[profile.dev]
opt-level = 2

[[bin]]
name = "resource-manager"
path = "resource-manager/main.rs"