[package]
name = "project"
version = "0.1.0"
authors = ["Krovspey Stepan <pit-rpg@yandex.ua>"]

[dependencies]
glutin = "0.21.1"
gl = "0.14.0"
rand = "0.7.2"
specs = "0.15.1"
image = "0.22.3"
uuid = { version = "0.7.4", features = ["v4"] }
byteorder = "1.3.2"
typer = "0.1.1"
obj = "0.9.0"
regex = "1.5.5"
lazy_static = "1.4.0"
rayon = "1.2.0"
gltf = "0.14.0"
heck = "0.3.1"
serde_json = "1.0.41"
serde = {version =  "1.0.101", features = ["derive"]}
clap = "2.33.0"
colored = "1.8.0"
tar = "0.4.26"
pathdiff = "0.1.0"

[features]
prod = []
names = []

[profile.dev]
opt-level = 2

[[bin]]
name = "resource-manager"
path = "resource-manager/main.rs"